--- a/package.json
+++ b/package.json
@@ -18,10 +18,20 @@
     "*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "1.20.0",
+    "@ant-design/icons": "5.3.6",
+    "@ant-design/nextjs-registry": "1.0.0",
+    "@ant-design/pro-components": "2.7.1",
+    "@ant-design/web3": "1.10.0",
+    "@ant-design/web3-icons": "1.5.0",
     "@heroicons/react": "2.1.3",
+    "@nextui-org/react": "2.3.6",
+    "@nextui-org/select": "2.1.27",
+    "antd": "5.16.4",
     "clsx": "2.1.1",
     "date-fns": "3.6.0",
     "dinero.js": "2.0.0-alpha.10",
+    "framer-motion": "11.1.7",
     "ms": "3.0.0-canary.1",
     "next": "14.3.0-canary.9",
     "react": "18.2.0",
